--- a/templates/orgs/org_sub_orgs.haml
+++ b/templates/orgs/org_sub_orgs.haml
@@ -18,8 +18,12 @@
     {% lessblock %}
       :plain
 
-        tr {
+        table.list {
+          border-top-left-radius: 0;
+          border-top-right-radius: 0;
+        }
 
+        tr {
           th {
             &.header-created_on {
               text-align: right;
