--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -543,20 +543,27 @@
           }
         }
 
-        fetchPJAXContent(url, ".spa-content", { 
+        fetchPJAXContent(url, ".spa-content", {
             "headers": { "TEMBA-SPA": "1"}, 
             "onSuccess": hideLoading,  
         });
       } else {
+
         evt.stopPropagation();
         evt.preventDefault();
-        var formData = new FormData(formEle);
-        showLoading();
-        fetchPJAXContent(window.lastFetch, ".spa-content", { 
-            "headers": { "TEMBA-SPA": "1"},
-            "formData": formData,
-            "onSuccess": hideLoading,  
-        });
+        
+        if (window.lastFetch.indexOf("{% url 'orgs.org_service'%}") > -1) {
+          formEle.action = window.lastFetch;
+          formEle.submit();
+        } else {
+          var formData = new FormData(formEle);
+          showLoading();
+          fetchPJAXContent(window.lastFetch, ".spa-content", {
+              "headers": { "TEMBA-SPA": "1"},
+              "formData": formData,
+              "onSuccess": hideLoading,
+          });
+        }
       }
     });
     
@@ -679,7 +686,7 @@
         window.history.pushState({ url: urlToGo, show: urlToShow }, "", urlToShow);
       }
 
-      fetchAjax(urlToGo, ".spa-content", { "headers": { 
+      fetchAjax(urlToGo, ".spa-content", { "headers": {
           "TEMBA-SPA": "1", 
           "TEMBA-REFERER-PATH": refererPath,
           "TEMBA-PATH": urlToShow
@@ -825,7 +832,7 @@
   :javascript
     function refresh(onSuccess, forceReload){
       var refererPath = window.location.pathname;
-      fetchPJAXContent(window.lastFetch, ".spa-content", { "headers": { 
+      fetchPJAXContent(window.lastFetch, ".spa-content", { "headers": {
         "TEMBA-SPA": "1", 
         "TEMBA-REFERER-PATH": refererPath,
         "TEMBA-PATH": refererPath,
@@ -854,7 +861,7 @@
 
   .flex-col
     .flex.widget-container(style="height:100vh;overflow:hidden")
-      -if not request.user.is_staff
+      -if request.user.is_staff
         -if user_org not in user_orgs
           .servicing.absolute.m-4(style="z-index:999999;right:0;bottom:0")
             .flex.items-center.bg-secondary.text-white.text-lg.rounded(style="opacity:1;padding:0em 1em;")
