--- a/templates/orgs/org_service.haml
+++ b/templates/orgs/org_service.haml
@@ -9,16 +9,22 @@
       document.querySelector("form").submit();
     }
 -block content
-  .mt-12
-    .text-xl
-      Different Workspace
+  -if other_org
 
-    .mt-4.mb-12
-      The page you are requesting belongs to a different workspace, <b>{{other_org.name}}</b>. To see it, you will need to service their account.
+    .mt-12
+      .text-xl
+        Different Workspace
 
-    %form(method="post" action="{% url 'orgs.org_service' %}")
-      -for field in form.fields
-        -render_field field
-      {% csrf_token %}
-      %input.button.button-primary(type="submit" value="Service Account")
-    
+      .mt-4.mb-12
+        -if next
+          The page you are requesting belongs to a different workspace, <b>{{other_org.name}}</b>. To see it, you will need to service their account.
+        -else
+          You are about to service the workspace, <b>{{other_org.name}}</b>.
+
+      %form(method="post" action="{% url 'orgs.org_service' %}")
+        -for field in form.fields
+          -render_field field
+        {% csrf_token %}
+        %input.button.button-primary(type="submit" value="Service Account")
+  -else
+    Invalid org, servicing not available.
